--- a/angular/Dockerfile.githubactions
+++ b/angular/Dockerfile.githubactions
@@ -1,12 +1,21 @@
-# Only used for GithubActions purposes
-
+# 1. Build
 FROM node:lts AS build
 WORKDIR /app
 COPY . /app
-
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
-        && echo "deb http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
-        && apt-get update && apt-get -y install google-chrome-stable
-
+RUN npm i -g yarn
 RUN yarn
-RUN yarn test:ci && yarn lint && yarn build --configuration=docker
+RUN yarn build --configuration=docker
+
+# 2. Deploy
+FROM nginx:latest
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends \
+  apache2-utils curl \
+  && rm -rf /var/lib/apt/lists/*
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/dist/. /usr/share/nginx/html
+COPY docker-external-config.json /usr/share/nginx/html/docker-external-config.json
+EXPOSE 80 443
+
+HEALTHCHECK --interval=60s --timeout=30s --start-period=1s --retries=3 CMD curl --fail http://localhost/health || exit 1
+CMD ["nginx", "-g", "daemon off;"]
