--- a/.github/workflows/deploy_to_okteto.yml
+++ b/.github/workflows/deploy_to_okteto.yml
@@ -23,11 +23,13 @@ jobs:
       uses: okteto/build@latest
       with:
         tag: registry.cloud.okteto.net/isandesh1986/mts-java:latest
+        file: java/Dockerfile
         
     - name: "Build Angular Image"
       uses: okteto/build@latest
       with:
-        tag: registry.cloud.okteto.net/isandesh1986/mts-angular:latest       
+        tag: registry.cloud.okteto.net/isandesh1986/mts-angular:latest
+        file: angular/Dockerfile
 
     - name: "Create deployment"
       uses: okteto/apply@latest
