--- a/java/Dockerfile.githubactions
+++ b/java/Dockerfile.githubactions
@@ -2,7 +2,7 @@
 FROM maven:3.6-jdk-11 AS build
 WORKDIR /app
 COPY java/mtsj/ /app
-RUN mvn clean install
+RUN mvn clean install -DskipTests=true
 
 # 2. Deploy Java war
 FROM adoptopenjdk/openjdk11:jre-11.0.4_11-alpine
